add new section on additive models

--- a/jasa_formatted/hillclimbing_jasa.bib
+++ b/jasa_formatted/hillclimbing_jasa.bib
@@ -193,3 +193,30 @@
   publisher={Taylor \& Francis}
 }
 
+@INPROCEEDINGS{Domahidi2013ecos, 
+   author={Domahidi, A. and Chu, E. and Boyd, S.}, 
+   booktitle={European Control Conference (ECC)}, 
+   title={{ECOS}: {A}n {SOCP} solver for embedded systems}, 
+   year={2013}, pages={3071-3076}
+}
+
+@article{buja1989linear,
+  title={Linear smoothers and additive models},
+  author={Buja, Andreas and Hastie, Trevor and Tibshirani, Robert},
+  journal={The Annals of Statistics},
+  pages={453--510},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{friedman1981projection,
+  title={Projection pursuit regression},
+  author={Friedman, Jerome H and Stuetzle, Werner},
+  journal={Journal of the American statistical Association},
+  volume={76},
+  number={376},
+  pages={817--823},
+  year={1981},
+  publisher={Taylor \& Francis Group}
+}
+
