--- a/jasa_formatted/hillclimbing_jasa.tex
+++ b/jasa_formatted/hillclimbing_jasa.tex
@@ -45,6 +45,9 @@
 \usepackage{microtype}
 \DisableLigatures[f]{encoding = *, family = * }
 
+% subcaptions
+\usepackage{subcaption}
+
 % for the beautiful checkmarks
 \usepackage{pifont}
 
@@ -476,7 +479,7 @@ Thus far, we have restricted our attention to joint optimization for training/va
 
 \subsection{Examples}\label{exampleSection}
 
-To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net, sparse group lasso, and the generalized lasso, where the training criterions are nonsmooth, but $\hat{\boldsymbol \theta}(\boldsymbol\lambda)$ is smooth almost everywhere. Finally, we discuss descent-based joint optimization for an additive partially linear model, an example of a semi-parametric regression.
+To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net, sparse group lasso, and the generalized lasso, where the training criterions are nonsmooth, but $\hat{\boldsymbol \theta}(\boldsymbol\lambda)$ is smooth almost everywhere. Finally, we discuss descent-based joint optimization for an additive partially linear model as an example of semi-parametric regression and an additive model as an example of nonparametric regression.
 
 For ease of notation, we will let $S_{\boldsymbol{\lambda}}$ denote the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$. For reference, $S_{\boldsymbol{\lambda}}$ for each regression example is specified in Table~\ref{table:differentiableSpace}. 
 
@@ -524,6 +527,8 @@ Sparse Group Lasso & $span(\{e_i | \hat{\theta}_i\left(\boldsymbol{\lambda}\righ
 Generalized Lasso & $\mathcal{N}(\boldsymbol I_{I(\boldsymbol \lambda)} \boldsymbol D)$ where $I(\boldsymbol \lambda) = \{ i | \left(\boldsymbol D \hat{\boldsymbol{\theta}}(\boldsymbol \lambda)\right)_i = 0  \text{ for } i=1,...,p \}$ \\
 \hline
 Additive Partially Linear Model & $span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\lambda}\right) \ne 0  \text{ for } i=1,...,p \})  \oplus  \mathbb{R}^{n}$\\
+\hline
+Additive Model & $\mathbb{R}^p$\\
 \hline
 \end{tabular}
 \end{center}
@@ -682,7 +687,7 @@ From \eqref{implicitDifferentiation} and the chain rule, we get that the gradien
 
 \begin{equation}
 \nabla_{\boldsymbol \lambda} L(\boldsymbol{y_V}, f_{\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
-\frac{1}{n}
+- \frac{1}{n}
 \left (
 \boldsymbol{X}_{V, I(\boldsymbol\lambda)}
 \frac{\partial}{\partial \boldsymbol\lambda} \hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
@@ -796,7 +801,7 @@ Plugging in \eqref{genlassoParamDeriv} to the chain rule gives us the gradient o
 
 \subsubsection{Additive Partially Linear Models}\label{sec:aplm}
 
-Finally, we present an example from semi-parametric regression: an additive partially linear model (APLM) with Hodrick-Prescott (H-P) filtering for unevenly-spaced inputs and the lasso penalty. In APLMs, the response is modeled as the sum of nonlinear and linear functions.  The combination of H-P filtering and lasso favors models with smooth non-parametric estimates and sparse linear effects.
+Now we consider an example from semi-parametric regression: an additive partially linear model (APLM) with Hodrick-Prescott (H-P) filtering for unevenly-spaced inputs and the lasso penalty. In APLMs, the response is modeled as the sum of nonlinear and linear functions.  The combination of H-P filtering and lasso favors models with smooth non-parametric estimates and sparse linear effects.
 
 In this example we have a measured a response $y_i$, a vector of ``linearly modeled features'' $\boldsymbol{x}_i$, and a single ``continuously modeled feature'' $z_i$ for each of $i=1,\ldots n$ observations. We believe that $\boldsymbol y$ can be modeled as an additive combination of these features:
 \begin{equation}
@@ -804,7 +809,7 @@ In this example we have a measured a response $y_i$, a vector of ``linearly mode
 \end{equation}
 We want to estimate the coefficients $\boldsymbol{\beta}$ and values of the function $g$ at our observations: $\boldsymbol{\theta} = (\theta_1, ..., \theta_n) \equiv (g(z_1), ..., g(z_n))$.
 
-To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{X} \in \mathbb{R}^{n \times p}$ be the design matrix of the $p$ linear predictors, $\boldsymbol{z} \in \mathbb{R}^n$ be the design vector for the nonlinear predictor, and $\boldsymbol{y} \in \mathbb{R}^n$ be the vector of responses. We assume that the observations are ordered such that $z_1 \le z_2 \le \cdots \le z_n$. Let $\boldsymbol{I}_T$ be a $n \times n$ diagonal matrix with elements 1 or 0 that partitions the data into the training set $\boldsymbol{X}_T= \boldsymbol{I}_T \boldsymbol{X}$ and the validation set $\boldsymbol{X}_V= (\boldsymbol{I} - \boldsymbol{I}_T) \boldsymbol{X}$.
+To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{X} \in \mathbb{R}^{n \times p}$ be the design matrix of the $p$ linear predictors, $\boldsymbol{z} \in \mathbb{R}^n$ be the design vector for the nonlinear predictor, and $\boldsymbol{y} \in \mathbb{R}^n$ be the vector of responses. We assume that the observations are ordered such that $z_1 \le z_2 \le \cdots \le z_n$. Let $\boldsymbol{I}_T, \boldsymbol{I}_V$ be a matrices such that the training set $\boldsymbol{X}_T= \boldsymbol{I}_T \boldsymbol{X}$ and the validation set $\boldsymbol{X}_V= \boldsymbol{I}_V \boldsymbol{X}$.
 
 Our joint optimization problem is defined as follows:
 \begin{equation}
@@ -813,7 +818,7 @@ Our joint optimization problem is defined as follows:
 \left \|
 \boldsymbol{y}_V
 - \boldsymbol{X}_V\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
-- (\boldsymbol{I} - \boldsymbol{I}_T) \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
+- \boldsymbol{I}_V \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
 \right \|^2_2 \\
 \text{s.t. }
 \hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}),
@@ -885,7 +890,7 @@ We now calculate the gradient of the validation loss. Given $I(\boldsymbol \lamb
 \left \|
 \boldsymbol{y}_V
 - \boldsymbol{X}_{V, I(\boldsymbol \lambda)} \hat{\boldsymbol{\eta}}(\boldsymbol{\lambda})
-- (\boldsymbol{I} - \boldsymbol{I}_T) \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
+- \boldsymbol{I}_V \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
 \right \|^2_2 \\
 \text{s.t. }
 \hat{\boldsymbol{\eta}}(\boldsymbol{\lambda}),
@@ -926,14 +931,114 @@ By the chain rule, the gradient of the validation loss is
 \nabla_{\boldsymbol{\lambda}} L_V(\boldsymbol{\lambda}) =
 - \left(
 \boldsymbol{X}_{V, I(\boldsymbol\lambda)} \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-+ (\boldsymbol I - \boldsymbol{I}_T) \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
++ \boldsymbol{I}_V \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
 \right )^\top
 \left (
 \boldsymbol{y}_V
 - \boldsymbol{X}_{V, I(\boldsymbol\lambda)} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-- (\boldsymbol I - \boldsymbol{I}_T) \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
+- \boldsymbol{I}_V \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
 \right )
 \end{equation*}
+
+\subsection{Additive model with heterogeneous smoothness}\label{sec:additive}
+
+Finally, consider a nonparametric regression model for response $y$ given $p$ covariates $x_1, ..., x_p$
+\begin{equation}
+y = f(x_1, ..., x_p) + \epsilon
+\end{equation}
+where $\epsilon$ are independent errors.
+When $p$ is large, the multivariate function $f$ is difficult to estimate due to the ``curse of dimensionality." The additive model proposed by \citet{buja1989linear} addresses this problem by approximating the multivariate function with $p$ univariate functions
+\begin{equation}
+y = \sum_{i=1}^p f_i(x_i) + \epsilon
+\end{equation}
+This is also a special case of the PPR (projection pursuit regression) model proposed by Friedman and Stuetzle (1981),  the ALS (alternating least squares) model of van der Burg and de Leeuw (1983) and the ACE (alternating conditional expectation) model of Breiman and Friedman (1985). (rewrite? remove? dunno?)
+
+In this example, we fit smooth estimates $\boldsymbol{\theta}_i \in \mathbb{R}^n$ for $f_i(x_{i1}), f_i(x_{i2}), ..., f_i(x_{isn})$ using least squares with a ridge penalty for the second-order differences. Suppose there are a total of $n$ observations, where the first $|T|$ observations are from the training set and the last $|V|$ observations are from the validation set. Accordingly, let $\boldsymbol{I}_T$ as the first $|T|$ rows and $\boldsymbol{I}_V$ as the last $|V|$ rows of an $n\times n$ identity matrix. The joint optimization problem is
+\begin{equation}
+\begin{array}{c}
+\min_{\boldsymbol{\lambda} \in \mathbb{R}^P_+} \frac{1}{2} \left \| y_V - \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) \right \|^2_2 \\
+\hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) = 
+\min_{\boldsymbol{\theta}^{(i)} \in \mathbb{R}^n} \frac{1}{2} \left \| \boldsymbol{y}_T
+- \boldsymbol{I}_T \sum_{i=1}^p \boldsymbol{\theta}^{(i)} \right \|^2_2
++ \sum_{i=1}^p \lambda_i \left \| \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \boldsymbol{\theta}^{(i)} \right \|_2^2
++ \epsilon \| \boldsymbol{\theta} \|_2^2
+\end{array}
+\end{equation}
+The matrix $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ gives the second-order differences between the nonparametric estimates of $f_i$. Let the $n$ observations be ordered according to the $i$th covariate such that $x_{ik_1} \le x_{ik_2} \le ... \le x_{ik_n}$. $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \in \mathbb{R}^{n \times n}$ is the corresponding first-order difference matrix; so row $j=1,...,n-1$ of $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}$ has a -1 in position $k_{j}$, 1 in position $k_{j+1}$, and 0 elsewhere and row $n$ is all zeros. Then $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ is
+\begin{equation}
+\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \cdot
+\text{diag} \left ( \frac{1}{x_{ik_2} - x_{ik_1}}, \frac{1}{x_{ik_3} - x_{ik_2}}, ... , \frac{1}{x_{ik_n} - x_{ik_{n-1}}}, 0 \right )
+\cdot \boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}
+\end{equation}
+
+Again, the additional small, fixed ridge penalty in the training set criterion is to ensure strong convexity.
+
+Note that the joint optimization problem gives the general case with tuning parameters $\lambda_1, ..., \lambda_p$. Usually, one combines them into a single regularization parameter $\lambda$ since tuning $p \ge 2$ parameters is computationally intractable. In the simulation studies, we will demonstrate tuning all $p$ parameters.
+
+It is easy to check that all three conditions for Theorem~\ref{thethrm} are satisfied. The problem is composed solely of quadratic functions, so the validation loss $L(\boldsymbol {y}_v, \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}))$ differentiable everywhere with respect to $\boldsymbol{\lambda}$. Choosing $\epsilon >0$ will satisfy the positive definite condition.
+
+To calculate the gradient, we perform implicit differentiation with respect to $\lambda_i$ on the KKT conditions for $\{ \hat{\boldsymbol{\theta}_i}(\boldsymbol \lambda) \}_{i=1,..,p}$. We find that
+\begin{equation}
+\left (
+\begin{array}{c}
+\frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(1)}(\boldsymbol \lambda)\\
+... \\
+\frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(p)}(\boldsymbol \lambda)\\
+\end{array}
+\right )
+ =
+\boldsymbol{W}^{-1}
+\left (
+\begin{array}{c}
+\boldsymbol{0}\\
+\boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_i} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol \lambda) \\
+\boldsymbol{0}
+\end{array}
+\right )
+\end{equation}
+
+where $\boldsymbol{W}$ is the matrix
+
+\begin{equation}
+\left (
+\begin{array}{cccc}
+\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_1 \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_1} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_1} + \epsilon \boldsymbol{I} &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T &
+... &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T\\
+\boldsymbol{I}_T^\top \boldsymbol{I}_T &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_2 \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_2} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_2} + \epsilon \boldsymbol{I} &
+... &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T\\
+... & ... & ... & ... \\
+\boldsymbol{I}_T^\top \boldsymbol{I}_T &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T &
+... &
+\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_p \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_p} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_p} + \epsilon \boldsymbol{I}\\
+\end{array}
+\right )
+\end{equation}
+
+By the chain rule, the gradient of the validation loss is then
+\begin{equation}
+\nabla_{\boldsymbol \lambda} L(\boldsymbol y_V, \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda})) =
+- \left (
+\boldsymbol{I}_V \sum_{i=1}^p \frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(i)} (\boldsymbol \lambda)
+\right )^\top
+\left (
+\boldsymbol{y}_V - \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)} (\boldsymbol \lambda)
+\right )
+\end{equation}
+
+%\begin{equation}
+%\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \lambda \sum_{m=1}^M \| D^{(2)}_m \theta^{(m)} \|_2^2
+%\end{equation}
+%where $D^{(2)}_m$ are the second order difference matrices derived from covariates $\boldsymbol{x}_m$.
+%
+%If the functions $f_m$ have very different behaviors (e.g. $f_1$ is linear and $f_2$ is a sinusoid), then one may expect that having a separate penalty parameter for each penalty would result in better model fits. That is, we may be interested in fitting the model
+%\begin{equation}
+%\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2n} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \sum_{m=1}^M \lambda_m \| D^{(2)}_m \theta^{(m)} \|_2^2
+%\end{equation}
 
 \subsection{Gradient Descent Details}\label{sec:alg_details}
 Here we discuss choice of step size and our convergence criterion.
@@ -1189,6 +1294,65 @@ APLM 3 & 0.41 & 4.85 & 4.08 & 54.63 \\
 \label{ref:aplm}
 \end{table}
 
+\subsection{Additive models with heterogeneous smoothness}
+
+Finally, we consider the additive model from Section~\ref{sec:additive}. This model is particularly useful when the functions $f_1, ..., f_p$ have varying levels of smoothness. Ideally, $\lambda_i$ is large for $f_i$ with nearly constant first-order derivatives and small for $f_i$ with drastically changing first-order derivatives.  While it is computationally intractable to tune the parameters via grid search for $p > 2$, gradient descent is computationally feasible and achieves good performance.
+
+The simulation settings are as follows. We generated thirty datasets, each with 180 training, 60 validation, and 60 test observations with $p=3$ covariates. Each set of covariates $\boldsymbol{x}_i$ was a random permutation of values $\delta_i - 15 + 0.1 j$ for $j=1,...,300$ where the random variable $\delta_i \sim \mathcal{U}(0, 0.1)$ jitters the start position. The functions are 
+\begin{equation}
+% big_sin, identity_fcn, big_cos_sin
+\begin{array}{c}
+f_1(x_1) = 9 \sin(2x_1)\\
+f_2(x_2) = x_2 \\
+f_3(x_3) = 6 \cos(1.25 x_3) + 6 \sin(0.5 x_3 + 0.5)
+\end{array}
+\end{equation}
+The response $y$ was generated from the model 
+\begin{equation}
+y=\sum _{i=1}^3 f_i(x_i) + \sigma \epsilon
+\end{equation}
+where $\epsilon \sim N(0, 1)$ and $\sigma$ was chosen such that the signal to noise ratio was 2.
+
+Since performing grid search for all 3 penalty parameters is computationally intractable, we did a one-dimensional search over 10 (log-spaced) values from $1e$-3 to 50. Gradient descent was initialized at $\lambda_1=\lambda_2=\lambda_3=1$. The inner optimization problem for the training set was solved using ECOS \citep{Domahidi2013ecos}.
+
+\begin{table}
+\begin{center}
+\begin{tabular}{| l | l | l | l | }
+\hline
+& Validation Error & Test Error & Runtime (sec) \\
+\hline
+Gradient Descent & 33.97 (1.31) & 38.17 (1.61) & 97.15 \\
+\hline
+Grid Search & 38.93 (1.57) & 42.84 (1.88) & 23.70 \\
+\hline
+\end{tabular}
+\end{center}
+\caption {Comparison of the performance of additive model with three penalty parameters tuned by gradient descent and that with one penalty parameter tuned by grid search. Standard errors are given in parentheses.}
+\label{tab:additive}
+\end{table}
+
+\begin{figure}
+\begin{subfigure}[b]{0.5\textwidth}
+\includegraphics[width=1.1\textwidth] {threegam/train_gs_v_hc_f3_0.pdf}
+\caption{$f_1$}
+\end{subfigure}
+\begin{subfigure}[b]{0.5\textwidth}
+\includegraphics[width=1.1\textwidth]  {threegam/train_gs_v_hc_f3_1.pdf}
+\caption{$f_2$}
+\end{subfigure}
+\begin{subfigure}[b]{0.5\textwidth}
+\includegraphics[width=1.1\textwidth]  {threegam/train_gs_v_hc_f3_2.pdf}
+\caption{$f_3$}
+\end{subfigure}
+
+\caption{Example estimates $\hat{\boldsymbol{\theta}}_1, \hat{\boldsymbol{\theta}}_2, \hat{\boldsymbol{\theta}}_3$ for the test set: Left - Grid search, Right - Gradient descent. The solid lines are the true values of the test observations, the dotted lines are the estimates from the model with three penalty parameters, and the dashed lines are the estimates from the model with one penalty parameter.}
+\label{fig:additive_test}
+\end{figure}
+
+As seen in Table~\ref{tab:additive}, the additive model with three penalty parameters has significantly lower validation error compared to one with a single penalty parameter, which is expected given the larger model space. Furthermore, the additive model with three penalty parameters achieved significantly lower test error. In Figure~\ref{fig:additive_test}, we provide example estimates given by the model with one penalty parameter vs. three penalty parameters. As seen in the figures, the latter produces estimates with less variation for $f_2$ and more variation for $f_1$ and $f_3$, which is exactly what we would hope for. In fact, gradient descent consistently determined that $f_2$ was the smoothest function; for 27 of the thirty runs, $\hat{\lambda}_2$ was larger than $\hat{\lambda}_1$ and $\hat{\lambda}_3$.
+
+The runtime for tuning the additive model with three penalty parameters using gradient descent was slower than grid search, but still within a reasonable range. Gradient descent is certainly much faster than performing a three-dimensional grid search for this problem.
+
 \section{Application to Biological Data}\label{realDataResults}
 Finally, we tested descent-based joint optimization in a real data example. More specifically, we considered the problem of finding predictive genes from gene pathways for Crohn's Disease and Ulcerative Colitis. \citet{simon2013sparse} addressed this problem using the sparse group lasso; we now compare this against applying the un-pooled sparse group lasso, where the regularization parameters were tuned using gradient descent.
 
@@ -1222,82 +1386,6 @@ In this paper, we proposed finding the optimal regularization parameters by trea
 Empirically, we find that models fit by descent-based joint optimization have similar accuracy to those from grid search. Furthermore, the scalability of this approach allows us to test new regression problems with multiple penalties. In particular, we found that an un-pooled variant of sparse group lasso showed promising results. More research should be done to explore this new regularization method.
 
 Future work could include finding other classes of regularization methods that are suitable for descent-based joint optimization and implementing descent-based joint optimization with more sophisticated optimization methods.
-
-
-\section{NEW: Trend Filtering}\label{sec:trendfilter}
-
-Nonparametric regression via trend filtering. ....paragraph goes here....
-
-We suppose observations $y$ come from the model
-\begin{equation}
-y = \sum_{m=1}^M f_m(x_m) + \epsilon
-\end{equation}
-where $x_m$ are the observed covariates, $f_m$ are the $M$ functions to be estimated, and $\epsilon$ are independent errors. If we believe that the functions are smooth, the functions can be estimated using the 2nd order $\ell_2$ trend filtering estimate defined as
-\begin{equation}
-\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2n} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \lambda \sum_{m=1}^M \| D^{(2)}_m \theta^{(m)} \|_2^2
-\end{equation}
-where $D^{(2)}_m$ are the second order difference matrices derived from covariates $\boldsymbol{x}_m$.
-
-If the functions $f_m$ have very different behaviors (e.g. $f_1$ is linear and $f_2$ is a sinusoid), then one may expect that having a separate penalty parameter for each penalty would result in better model fits. That is, we may be interested in fitting the model
-\begin{equation}
-\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2n} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \sum_{m=1}^M \lambda_m \| D^{(2)}_m \theta^{(m)} \|_2^2
-\end{equation}
-Of course the difficulty is in choosing the penalty parameters. Ideally, $\lambda_m$ is large for $f_m$ with nearly constant first-order derivatives and small for $f_m$ with drastically changing first-order derivatives. Through this example, we find that descent-based joint optimization tunes the penalty parameters appropriately.
-
-The joint optimization problem is formulated as
-\begin{equation}
-\begin{array}{c}
-\min_{\boldsymbol{\lambda} \in \mathbb{R}^M_+} \frac{1}{2} \left \| y_V - (\boldsymbol{I} - \boldsymbol{I}_T) \sum_{m=1}^M \hat{\boldsymbol{\theta}}^{(m)}(\boldsymbol{\lambda}) \right \|^2_2 \\
-\hat{\boldsymbol{\theta}}^{(m)}(\boldsymbol{\lambda}) = 
-\min_{\boldsymbol{\theta}^{(m)} \in \mathbb{R}^n} \frac{1}{2} \left \| \boldsymbol{y}_T
-- \boldsymbol{I}_T \sum_{m=1}^M \boldsymbol{\theta}^{(m)} \right \|^2_2
-+ \sum_{m=1}^M \lambda_m \left \| D^{(2)}_m \boldsymbol{\theta}^{(m)} \right \|_2^2
-+ \epsilon \| \boldsymbol{\theta} \|_2^2
-\end{array}
-\end{equation}
-
-Thru gradient crunching, you get
-\begin{equation}
-\boldsymbol{W}
-\left (
-\begin{array}{c}
-\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol{\theta}}^{(1)}(\boldsymbol \lambda)\\
-... \\
-\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol{\theta}}^{(M)}(\boldsymbol \lambda)\\
-\end{array}
-\right )
- =
-\left (
-\begin{array}{c}
-\boldsymbol{0}\\
-\boldsymbol{D}^{(2)\perp}_m \boldsymbol{D}^{(2)}_m \hat{\boldsymbol{\theta}}^{(m)}(\boldsymbol \lambda) \\
-\boldsymbol{0}
-\end{array}
-\right )
-\end{equation}
-
-where $W$ is the matrix
-
-\begin{equation}
-\left (
-\begin{array}{cccc}
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T + \lambda_1 \boldsymbol{D}^{(2)\perp}_1 \boldsymbol{D}^{(2)}_1 + \epsilon \boldsymbol{I} &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T &
-... &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T\\
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T + \lambda_1 \boldsymbol{D}^{(2)\perp}_2 \boldsymbol{D}^{(2)}_2 + \epsilon \boldsymbol{I} &
-... &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T\\
-... & ... & ... & ... \\
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T &
-... &
-\boldsymbol{I}_T^\perp \boldsymbol{I}_T + \lambda_1 \boldsymbol{D}^{(2)\perp}_M \boldsymbol{D}^{(2)}_M + \epsilon \boldsymbol{I}\\
-\end{array}
-\right )
-\end{equation}
-
 
 \bigskip
 
