--- a/jasa_formatted/hillclimbing_jasa.tex
+++ b/jasa_formatted/hillclimbing_jasa.tex
@@ -1333,15 +1333,15 @@ Grid Search & 38.93 (1.57) & 42.84 (1.88) & 23.70 \\
 
 \begin{figure}
 \begin{subfigure}[b]{0.5\textwidth}
-\includegraphics[width=1.1\textwidth] {threegam/train_gs_v_hc_f3_0.pdf}
+\includegraphics[width=1.1\textwidth] {train_gs_v_hc_f3_0.pdf}
 \caption{$f_1$}
 \end{subfigure}
 \begin{subfigure}[b]{0.5\textwidth}
-\includegraphics[width=1.1\textwidth]  {threegam/train_gs_v_hc_f3_1.pdf}
+\includegraphics[width=1.1\textwidth]  {train_gs_v_hc_f3_1.pdf}
 \caption{$f_2$}
 \end{subfigure}
 \begin{subfigure}[b]{0.5\textwidth}
-\includegraphics[width=1.1\textwidth]  {threegam/train_gs_v_hc_f3_2.pdf}
+\includegraphics[width=1.1\textwidth]  {train_gs_v_hc_f3_2.pdf}
 \caption{$f_3$}
 \end{subfigure}
 
