--- a/jasa_formatted/hillclimbing_jasa.tex
+++ b/jasa_formatted/hillclimbing_jasa.tex
@@ -680,9 +680,9 @@ Finally, consider an additive partially linear model (APLM) for response $y$ giv
 \begin{equation}
 y = \sum_{i=1}^p f_i(x_i) + \boldsymbol{\beta}^\top \boldsymbol z  + \epsilon
 \end{equation}
-As before, we fit the model using least squares, and add penalties to induce preferred behaviors. In particular, we are interested in smooth estimates $\hat{\boldsymbol{\theta}}^{(i)} \in \mathbb{R}^n$ for the function $f_i$ at points $x_{i1}, ..., x_{in}$ using Hodrick-Prescott (H-P) filtering. Furthermore, we are interested in sparse estimates $\hat{\boldsymbol{\beta}}$, so we also add a lasso penalty.
+As before, we fit the model using least squares. In addition, we induce smoothness in the estimates $\hat{\boldsymbol{\theta}}^{(i)} \in \mathbb{R}^n$ for $f_i$ by penalizing the second-order differences and we induce sparsity in $\hat{\boldsymbol{\beta}}$ by adding a lasso penalty.
 
-To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathbb{R}^{|V| \times q}$ be the linear covariates from the training and validation sets. Let $\boldsymbol X \in \mathbb{R}^{n \times p}$ be the design matrix for the nonlinear covariates where the first $|T|$ observations are from the training set and the last $|V|$ observations are from the validation set. Let $\boldsymbol{I}_T$ as the first $|T|$ rows and $\boldsymbol{I}_V$ as the last $|V|$ rows of an $n\times n$ identity matrix. We combine the validation and training nonlinear covariates into one design matrix since we use the training data to fit estimates for $f_i$ at the validation points. 
+To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathbb{R}^{|V| \times q}$ be the linear covariates from the training and validation sets. Let $\boldsymbol X \in \mathbb{R}^{n \times p}$ be the design matrix for the nonlinear covariates where the first $|T|$ observations are from the training set and the last $|V|$ observations are from the validation set. Let $\boldsymbol{I}_T$ and $\boldsymbol{I}_V$ be matrices such that $X_T = I_T X$ and $X_V = I_V X$. We combine the validation and training nonlinear covariates into one design matrix since we use the training data to fit estimates for $f_i$ at the validation points. 
 
 The joint optimization problem is
 \begin{equation}
